# esp32-mipidsi-test

./: Cargo.toml  diagram.json  wokwi.toml
.cargo/: config.toml
src/: main.rs  nocs.rs
